[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sounds/Level1/VaseCrash.mp3" type="AudioStream" id=1]
[ext_resource path="res://Levels/Level1/Sprites/Vase2.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level1/Sprites/Vase.gd" type="Script" id=3]
[ext_resource path="res://Misc/Overlap/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/Coins/GoldDrop.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 46.3857, 46.4762 )

[sub_resource type="Animation" id=1]
resource_name = "Hit"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("VaseCrash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.02,
"stream": ExtResource( 1 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrashArea:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LightOccluder2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 41 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CrashArea:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrashArea:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 40.1421

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 57.1445, 57.4839 )

[sub_resource type="OccluderPolygon2D" id=7]
closed = false
polygon = PoolVector2Array( -6.65625, -9.25, 6, -9.34375, 6.09375, -6.375, 5.375, -5.625, 5.46875, -5, 7.125, -4.6875, 8.9375, -1.75, 9.03125, 1.78125, 4.55396, 9.13675, -5.0922, 9.0666, -9.5, 1.71875, -9.46875, -2.34375, -7.625, -4.78125, -6.09375, -4.78125, -6.03125, -6.21875, -7.21875, -7.1875, -6.67066, -9.20849 )

[node name="Vase2" type="RigidBody2D"]
collision_layer = 32
collision_mask = 41
gravity_scale = 5.0
can_sleep = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.38419e-07, 0.336405 )
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Hit = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 4.48984, -8.24069 )
scale = Vector2( 0.2, 0.2 )
collision_layer = 32
collision_mask = 320

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -18.1182, 42.8855 )
shape = SubResource( 4 )

[node name="CrashArea" type="Area2D" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrashArea"]
position = Vector2( 2.61352, -7.93701 )
shape = SubResource( 6 )

[node name="VaseCrash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
max_distance = 800.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="GoldDrop" parent="." instance=ExtResource( 5 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
position = Vector2( 0.736615, -0.105231 )
occluder = SubResource( 7 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="CrashArea" to="." method="_on_CrashArea_body_entered"]
[connection signal="body_exited" from="CrashArea" to="." method="_on_CrashArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
